fix(product-slider): move control down on mobile

--- a/packages/components/src/components/bal-product-slider/bal-product-slider.sass
+++ b/packages/components/src/components/bal-product-slider/bal-product-slider.sass
@@ -30,7 +30,7 @@
     height: 48px
     width: 100%
     +mobile
-      top: 172px
+      top: 200px
       display: flex
       align-items: center
       justify-content: center
